Fixed margin-top on .small-gap to be the same as nav.

--- a/client/src/style/_Media.scss
+++ b/client/src/style/_Media.scss
@@ -27,6 +27,11 @@
     }
   }
 
+  // Main Content
+  .small-gap {
+    margin-top: $mobile-header-height;
+  }
+
   // Chat
   .chat {
     display: none;
